--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Gravity Sim – Visual Test</title>
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        background: #050816;
-        color: #e5f5ff;
-        font-family: system-ui, sans-serif;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-        display: block;
-        image-rendering: pixelated;
-      }
-    </style>
-  </head>
-  <body>
-    <canvas id="simCanvas"></canvas>
-    <script type="module" src="./src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Gravity Sim – Visual Test</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <div id="hud">
+    <div class="hud-left">
+      <span id="hud-fps">FPS:<span>
+          <span id="fps-counter">--</span>
+          <span id="hud-bodies">Bodies:</span>
+          <span id="bodies-counter">--</span>
+          <span id="hud-collisions">Collisions:</span>
+          <span id="collisions-counter">--</span>
+    </div>
+    <div class="hud-right">
+      <div class="hud-speed">
+        <span class="hud-speed-label">×<span id="hud-speed-value">1</span></span>
+        <input id="speed-slider" type="range" min="0" max="3" step="1" value="1" />
+      </div>
+      <button id="btn-toggle" title="Play/Pause">
+        <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
+          <path id="icon-toggle" d="M6 19h4V5H6zm8-14v14h4V5h-4z" />
+        </svg>
+      </button>
+      <button id="btn-reset" title="Reset">
+        <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
+          <path d="M12 5V1L8 5l4 4V6a6 6 0 1 1-6 6H4a8 8 0 1 0 8-8z" />
+        </svg>
+      </button>
+      <select id="seed-select"></select>
+    </div>
+  </div>
+  <canvas id="simCanvas"></canvas>
+  <script type="module" src="./src/main.js"></script>
+</body>
+
 </html>
