Implement camera functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="hud">
     <div class="hud-left">
-      <span id="hud-fps">FPS:<span>
+      <span id="hud-fps">FPS:</span>
       <span id="fps-counter">--</span>
       <span id="hud-bodies">Bodies:</span>
       <span id="bodies-counter">--</span>
