Add body tooltip, random name generation, and enhance camera functionality
- Introduced a tooltip for displaying body information in the UI.
- Added random name generation for bodies.
- Enhanced camera to follow selected bodies and updated HUD to reflect selected body details.
- Improved body merging logic to retain names and colors of dominant bodies.
- Updated styles for the tooltip and adjusted simulation seed data for better visuals.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <select id="seed-select"></select>
       </div>
     </div>
+    <div id="body-tooltip" class="body-tooltip" style="display: none"></div>
     <canvas id="simCanvas"></canvas>
     <script type="module" src="./src/main.js"></script>
   </body>
