Add camera position display to HUD and style adjustments

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <span id="hud-collisions">Collisions:</span>
         <span id="collisions-counter">--</span>
       </div>
+      <div class="hud-center">
+        <span id="camera-position"></span>
+      </div>
       <div class="hud-right">
         <div class="hud-speed">
           <span class="hud-speed-label">
