Refactor seed files to remove random name and color generation; add new seed functions for asteroid ring, head-on clusters, and chaotic triple system; implement collision resolution logic with debris generation; enhance color generation based on mass and velocity; introduce physics utility functions for center-of-mass velocity and escape velocity calculations.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Gravity Sim – Visual Test</title>
+    <title>Gravity Sim - Visual Test</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
 
@@ -22,7 +22,7 @@
       <div class="hud-right">
         <div class="hud-speed">
           <span class="hud-speed-label">
-            ×
+            x
             <span id="hud-speed-value">1</span>
           </span>
           <input id="speed-slider" type="range" min="0" max="3" step="1" value="1" />
